[package]
name = "toptimer"
version = "0.1.0"
edition = "2021"
description = "A high-quality terminal countdown TUI for conference deadlines."
license = "MIT"
readme = "README.md"
keywords = ["tui", "timer", "countdown", "conference", "deadline"]
categories = ["command-line-utilities"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui-big-text = "0.8"
